--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Flask==2.3.2
-Flask-SocketIO==5.3.3
-gunicorn==20.1.0
+blinker==1.6.3
+click==8.1.8
+Flask==2.2.5
+itsdangerous==2.1.2
+Jinja2==3.1.6
+MarkupSafe==2.1.5
+Werkzeug==2.2.3
